plugins/newspack-story-budget/src/style.scss
@import "@wordpress/dataviews/build-style/style.css";

body.toplevel_page_newspack-story-budget {
	background: #fff;
	--wp-components-color-accent: #003da5;
	--wp-components-color-accent-darker-10: #00296e;
	--wp-components-color-accent-darker-20: #001f53;
	--wp-admin-theme-color: #003da5;
	--wp-admin-color-alert-red: #cc1818;
	--wp-components-color-text: #1e1e1e;
}

.wrap {
	margin: 0 0 0 -20px;
}

/* Fix fullscreen modal content area */
.components-modal__frame.is-full-screen .components-modal__content > div:not(.components-modal__header) {
	height: 100%;
}

.components-modal__frame.newspack-story-budget__modal-page__story .components-modal__content {
	padding: 0;
	overflow: hidden;
}

.newspack-story-budget {
	$parent-selector: &;

	// Unused header.
	&__header {
		padding: 16px 48px;
		border-bottom: 1px solid #f0f0f0;
		min-height: 40px;
		h1 {
			flex-grow: 1;
			flex-basis: 0;
			white-space: nowrap;
		}
	}
	&__content {
		padding: 48px;
		// DataViews custom styles for rendering inside content area.
		.dataviews-wrapper {
			overflow: visible;
			margin-top: -16px;
		}
		.dataviews__view-actions,
		.dataviews-filters__container {
			padding: 16px 0;
		}
		.dataviews-view-table tr td:first-child,
		.dataviews-view-table tr th:first-child {
			padding-left: 8px;
		}
		.dataviews-view-table tr td:last-child,
		.dataviews-view-table tr th:last-child {
			padding-right: 8px;
		}
	}
	&__loading {
		display: flex;
		flex-direction: column;
		align-items: center;
		justify-content: center;
		width: 100%;
		max-width: 400px;
		height: 100px;
		margin: 30vh auto 0;
		text-align: center;
		> div {
			width: 100%;
			> div {
				left: 0; // Fix progress indicator position.
			}
		}
	}
	&__refresh-button-is-busy {
		animation: refresh-rotate 1s infinite;
	}

	@keyframes refresh-rotate {
		0% {
			transform: rotate(0deg);
		}
		50% {
			transform: rotate(-180deg);
		}
		100% {
			transform: rotate(-180deg);
		}
	}
	&__field-row {
		max-width: 280px;
		align-items: flex-start !important;
		justify-content: flex-start !important;
		> *:first-child {
			width: 40%;
			padding: 6px 0;
		}
		.newspack-story-budget__field {
			width: 60%;
		}
	}
	&__field {
		&__value {
			white-space: normal !important;
			line-height: inherit;
			text-align: left;
			display: inline-flex;
			padding: 6px 12px;
			margin: 0;
		}
		&__button {
			white-space: normal !important;
			line-height: inherit;
			text-align: left;
			height: auto;
			&:disabled {
				color: inherit !important;
			}
		}
		&__empty-value {
			color: #a0a0a0;
			font-style: italic;
			font-size: 12px;
		}
		&__popover .components-popover__content {
			min-width: 320px;
			padding: 16px;
			.block-editor-inspector-popover-header {
				margin-bottom: 16px;
			}
		}
		&__value-tooltip {
			max-width: 300px;
			text-align: left;
		}
	}
	&__table-row-field {
		margin: 0 -8px;
		position: relative;
		> svg,
		> span {
			position: absolute;
			top: 2px;
			left: -34px;
		}
		.newspack-story-budget__field__button,
		.newspack-story-budget__field__value {
			padding: 4px 8px;
		}
		.newspack-story-budget__table-row-field-error {
			fill: var(--wp-admin-color-alert-red);
		}
	}
	&__story {
		border: 1px solid rgba(0, 0, 0, 0.133);
		.components-modal__content & {
			height: 100%;
			border: 0;
		}
	}
	&__sidebar {
		flex: 0 0 280px;
		outline: 1px solid #0000;
		box-shadow: -1px 0 0 0 rgba(0, 0, 0, 0.133);
		z-index: 3;
	}
	&__post-status-info {
		margin: 0;
	}
	&__control {
		&__checkbox-option,
		&__radio-option {
			display: flex;
			align-items: flex-start;
			justify-content: flex-start;
			gap: 8px;
			input {
				margin: 0;
				flex-shrink: 0;
			}
			label {
				margin: 0;
				flex-grow: 1;
			}
		}
	}

	&__budget {
		border-radius: 8px;
		margin: 0;

		&-title {
			&__name {
				font-weight: 500;
				color: var(--wp-components-color-text);
			}
		}

		#{$parent-selector}__field__popover-button {
			h2 {
				font-weight: 500;
				color: var(--wp-components-color-accent);
				white-space: nowrap;
				margin: 0;
			}
		}

		&-wrapper {
			&.is-dragging {
				opacity: 0.5;
				transition: opacity 0.2s ease-in-out;
			}

			&.is-drag-over {
				opacity: 0.5;
				position: relative;

				&::after {
					content: "";
					position: absolute;
					top: 0;
					left: 0;
					right: 0;
					bottom: 0;
					border: 2px dashed var(--wp-admin-theme-color);
					pointer-events: none;
				}
			}

			&[draggable="true"] {
				user-select: none;
				-webkit-user-drag: element;
			}
		}

		&-drag-handle {
			cursor: move;

			&:active {
				cursor: move;
			}
		}

		&__sort-buttons {
			display: flex;
			flex-direction: column;
			justify-content: center;
			align-items: center;

			button {
				background: transparent;
				border: none;
				margin: 0;
				padding: 0;
				height: 20px;

				&:disabled {
					cursor: default;
					opacity: 0.3;
				}
			}
		}

		/**
		 * Overrides for the Newspack Action Card component to match the design.
		 */
		.newspack-action-card {
			&__badge {
				color: #f0f0f0 !important;
				background-color: var(--wp-components-color-accent) !important;
				border-radius: 999px !important;
			}
		}
	}

	&__budgets {
		&-actions {
			margin-bottom: 32px;

			&__primary {
				width: auto !important;
			}

			#{$parent-selector}__search {
				min-width: 240px;
			}

			#{$parent-selector}__divider {
				height: 32px;
				color: #ddd;
			}

			#{$parent-selector}__status-filter {
				text-transform: uppercase;

				select {
					min-width: 140px;
				}
			}
		}
	}

	&__pagination {
		padding: 12px 24px;

		&__page-text {
			align-items: center;
			font-size: 11px;
			font-weight: 500;
			text-transform: uppercase;

			* {
				margin: 0 !important;
			}

			.components-select-control__input {
				font-size: 11px !important;
			}
		}

		button.is-secondary {
			box-shadow: none;
			color: unset;

			&:disabled {
				opacity: 0.5;
				cursor: not-allowed;
				box-shadow: none !important;
			}
		}
	}
	&__modal-page {
		&__create-new-story,
		&__create-budget {
			max-width: 512px !important;
		}
	}
	&__error-message {
		color: var(--wp-admin-color-alert-red);
	}

	&__notices {
		position: fixed;
		bottom: 24px;
		padding-left: 24px;
		z-index: 99999;
		pointer-events: none;
	}
}

/**
 * Newspack Wizard Tweaks
 */
.newspack-wizard {
	&__header {
		&__inner {
			display: flex;
			align-items: center;
			justify-content: space-between;
			border-bottom: 1px solid #ddd;
		}
		&__actions {
			padding: 0 16px;
		}
	}
	&__title {
		border-bottom: 0;
	}
}
// Fix Tabbed Navigation
.newspack-tabbed-navigation {
	z-index: 10;
	li a {
		box-sizing: border-box;
	}
}
// Fix header logo background color.
.newspack-wizard__title svg {
	background: var(--wp-components-color-accent) !important;
}

